fixed left aisl not showing the whole image

--- a/AngularScroller/app/css/app.css
+++ b/AngularScroller/app/css/app.css
@@ -106,7 +106,8 @@ ul{
 
 .aisle#left {
   float: left;
-  background: url(../img/shelfleft.png) repeat;
+  background-image: url(../img/shelfleft.png);
+  background-repeat: repeat-y;
 }
 
 .aisle#right {
